--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<figure>
     	<img src="images/hebergements/4_small/cannebière1.jpg" alt="cannebière" />
     	<figcaption><h6>Auberge la Cannebière</h6>
-   		 <p>Nuit à partir de <strong>25€</strong></p>
+   		 <p>Nuit à partir de <span class="price">25€</span></p>
    		 <span class="rating1">
    		 		<i class="fas fa-star"></i>
 				<i class="fas fa-star"></i>
@@ -93,7 +93,7 @@
 		<figure>
     	<img src="images/hebergements/4_small/hotelduport2.jpg" alt="port" />
    		<figcaption><h6>Hôtel du Port</h6>
-    	<p>Nuit à partir de <strong>52€</strong></p>
+    	<p>Nuit à partir de <span class="price">52€</span></p>
     	<span class="rating1">
     			<i class="fas fa-star"></i>
 				<i class="fas fa-star"></i>
@@ -107,7 +107,7 @@
 		<figure>
    		<img src="images/hebergements/4_small/lesmouettes3.jpg" alt="lesmouettes" />
    		<figcaption><h6>Hôtel les Mouettes</h6>
-   		<p>Nuit à partir de <strong>76€</strong></p>
+   		<p>Nuit à partir de <span class="price">76€</span></p>
    		<span class="rating1">
 				<i class="fas fa-star"></i>
 				<i class="fas fa-star"></i>
@@ -121,7 +121,7 @@
 		<figure>
    		<img src="images/hebergements/4_small/lamer4.jpg" alt="lamer" />
    		<figcaption><h6>Hôtel de la mer</h6>
-   		<p>Nuit à partir de <strong>46€</strong></p>
+   		<p>Nuit à partir de <span class="price">46€</span></p>
    		<span class="rating1">
    				<i class="fas fa-star"></i>
    				<i class="fas fa-star"></i>
@@ -135,7 +135,7 @@
 		<figure>
    		<img src="images/hebergements/4_small/lepanier5.jpg" alt="lepanier" />
    		<figcaption><h6>Auberge Le Panier</h6>
-   		<p>Nuit à partir de <strong>23€</strong></p>
+   		<p>Nuit à partir de <span class="price">23€</span></p>
    		<span class="rating1">
    		 		<i class="fas fa-star"></i>
 				<i class="fas fa-star"></i>
@@ -149,7 +149,7 @@
 		<figure>
    		<img src="images/hebergements/4_small/amina6.jpg" alt="amina" />
    		<figcaption><h6>Hôtel chez Amina</h6>
-   		<p>Nuit à partir de <strong>96€</strong></p>
+   		<p>Nuit à partir de <span class="price">96€</span></p>
    		<span class="rating1">
    		 		<i class="fas fa-star"></i>
 				<i class="fas fa-star"></i>
@@ -174,7 +174,7 @@
 		<figure>
    		<img src="images/hebergements/4_small/lesoleil1.jpg" alt="lamer" />
    		<figcaption><h6>Hôtel le soleil du matin</h6>
-   		<p>Nuit à partir de <strong>128€</strong></p>
+   		<p>Nuit à partir de <span class="price">128€</span></p>
    		<span class="rating2">
    				<i class="fas fa-star"></i>
    				<i class="fas fa-star"></i>
@@ -188,7 +188,7 @@
 		<figure>
    		<img src="images/hebergements/4_small/aucoeur2.jpg" alt="lepanier" />
    		<figcaption><h6>Au coeur de l'eau Chambre d'hôtes</h6>
-   		<p>Nuit à partir de <strong>71€</strong></p>
+   		<p>Nuit à partir de <span class="price">71€</span></p>
    		<span class="rating2">
    		 		<i class="fas fa-star"></i>
 				<i class="fas fa-star"></i>
@@ -202,7 +202,7 @@
 		<figure>
    		<img src="images/hebergements/4_small/bleu3.jpg" alt="toutbleu" />
    		<figcaption><h6>Hôtel tout Bleu tout Blanc</h6>
-   		<p>Nuit à partir de <strong>68€</strong></p>
+   		<p>Nuit à partir de <span class="price">68€</span></p>
    		<span class="rating2">
    		 		<i class="fas fa-star"></i>
 				<i class="fas fa-star"></i>
@@ -221,61 +221,61 @@
 
 <div id="panel2">
 
-<section class="activity1">
+<div class="activity1">
 
 		<figure>
    		<img src="images/activites/4_small/vieuxport1.jpg" alt="vieuxport1" />
    		<figcaption>Vieux Port</figcaption>
   	 	</figure>
 
-</section>
+</div>
 
 
-<section class="activity2">
-<section class="chaos">
+<div class="activity2">
+<div class="chaos">
 		<figure>
    		<img src="images/activites/4_small/fortdepomègues.jpg" alt="fort2" />
    		<figcaption>Fort de Pomègues</figcaption>
   	 	</figure>
-</section>
+</div>
 
-<section class="activity22">
+<div class="activity22">
 
 		<figure>
    		<img src="images/activites/4_small/îlesdufrioul.jpg" alt="îles3" />
    		<figcaption>Îles du Frioul</figcaption>
   	 	</figure>
 
-</section>
-</section>
+</div>
+</div>
 
-<section class="activity3">
+<div class="activity3">
 
 		<figure>
    		<img src="images/activites/4_small/calanques.jpg" alt="calanques4" />
    		<figcaption>Parc National des Calanques</figcaption>
   	 	</figure>
 
-</section>
+</div>
 
-<section class="activity4">
-<section class="chaos2">
+<div class="activity4">
+<div class="chaos2">
 
 		<figure>
    		<img src="images/activites/4_small/notredame.jpg" alt="notredame5" />
    		<figcaption>Notre-Dame-de-la-Garde</figcaption>
   	 	</figure>
-</section>
+</div>
 
-<section class="activity44">
+<div class="activity44">
 
 		<figure>
    		<img src="images/activites/4_small/longchamp.jpg" alt="longchamp6" />
    		<figcaption>Parc Longchamp</figcaption>
   	 	</figure>
 
-</section>
-</section>
+</div>
+</div>
 </div>
 
 <footer>
