--- a/index.html
+++ b/index.html
@@ -1,304 +1,294 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-		<meta charset="UTF-8" />
-		<link rel="stylesheet" href="Style.css" />
-		<meta name="viewport" content="width=device-width"/>
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;800;900&display=swap" rel="stylesheet"> 
-		<script src="https://kit.fontawesome.com/48594cbb41.js" crossorigin="anonymous"></script>
-
-		<title>Reservia</title>
+	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="Style.css" />
+	<meta name="viewport" content="width=device-width"/>
+	<link rel="p reconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;800;900&display=swap" rel="stylesheet"> 
+	<script src="https://kit.fontawesome.com/48594cbb41.js" crossorigin="anonymous"></script>
+	<title>Reservia</title>
 </head>
 
 <header>
-<div class="logoreservia">
 
+	<div class="logoreservia">
 		<img src="images/logo/Reservia@4x.png" alt="logo Reservia">
-
-</div>
+	</div>
 
 	<nav>
 		<ul>
 			<li><a href="#panel1">Hébergements</a></li>
   			<li><a href="#panel2">Activités</a></li>
   		</ul>
-  	</nav>
+	</nav>
 
-<div class="subscribe">
-
-  		<a href="#" title="subscribe-section">S'inscrire</a>
-</div>
+	<div class="subscribe">
+		<a href="#" title="subscribe-section">S'inscrire</a>
+	</div>
 
 </header>
 
-<br>
+<div class="search">
+	
+	<h1> Trouvez votre hébergement pour des vacances de rêves </h1>
+		<p>En plein centre ville ou en pleine nature</p>
 
+		<div class="searchbar">
+		<label for="searchbar"><i class="fas fa-map-marker-alt"></i></label>
+		<input id="searchbar" name="searchbar" onfocus="this.value=''" onblur="this.value='Marseille, France'">
+		<button>Rechercher</button>
 
-		<div class="search">
-
-				<h1> Trouvez votre hébergement pour des vacances de rêves </h1>
-				<p>En plein centre ville ou en pleine nature</p>
-
-				<div class="searchbar">
-
-						<label for="searchbar"><i class="fas fa-map-marker-alt"></i></label>
-						<input id="searchbar" name="searchbar" placeholder=" Marseille, France" size="40" maxlength="10" />
-						<button>Rechercher</button>
-
-				<div class="mobile-search">
-						
-						<i class="fas fa-search"></i>
-				</div>
-			</div>
+		<div class="mobile-search"><i class="fas fa-search"></i>
 		</div>
-	<br>
+	</div>
+</div>
 
-<div class="filters"><h4> Filtres </h4>
-		<nav>
-			<ul>
-				<li><i class="fas fa-money-bill-wave"></i><p>Économique</p></li>
+<div class="filters">
+
+	<h4> Filtres </h4>
+	<nav>
+		<ul>
+			<li><i class="fas fa-money-bill-wave"></i><p>Économique</p></li>
       			<li><i class="fas fa-child"></i><p>Familiale</p></li>
        			<li><i class="fas fa-heart"></i><p>Romantique</p></li>
        			<li><i class="fas fa-dog"></i><p>Animaux Autorisés</p></li>
-       		</ul>
-       	</nav>
-	</div>
+      		</ul>
+   	</nav>
+</div>
 
-		<div id="logoinformation">
-		<i class="fas fa-info-circle"></i>
-		<p>Plus de 500 logements sont disponibles dans cette ville</p>
-		</div>
+<div id="logoinformation">
+	<i class="fas fa-info-circle"></i>
+	<p>Plus de 500 logements sont disponibles dans cette ville</p>
+</div>
 
-		<div id="panel1">
-
-	<section class="housing">
-
+<div id="panel1">
+<section class="housing">
+	
 	<h3>Hébergements à Marseille</h3>
 
-		<figure>
-    	<img src="images/hebergements/4_small/cannebière1.jpg" alt="cannebière" />
-    	<figcaption><h6>Auberge la Cannebière</h6>
-   		 <p>Nuit à partir de <span class="price">25€</span></p>
-   		 <span class="rating1">
-   		 		<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="far fa-star"></i>
+<figure>
+	<img src="images/hebergements/4_small/cannebière1.jpg" alt="cannebière" />
+<figcaption>
+	<h6>Auberge la Cannebière</h6>
+		<p>Nuit à partir de <span class="price">25€</span></p>
+		<span class="rating1">
+   		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="far fa-star"></i>
 		</span>
-		</figcaption>
-		</figure>
+	</figcaption>
+</figure>
 
-		<figure>
-    	<img src="images/hebergements/4_small/hotelduport2.jpg" alt="port" />
-   		<figcaption><h6>Hôtel du Port</h6>
-    	<p>Nuit à partir de <span class="price">52€</span></p>
-    	<span class="rating1">
-    			<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star" ></i>
+<figure>
+	<img src="images/hebergements/4_small/hotelduport2.jpg" alt="port" />
+<figcaption>
+	<h6>Hôtel du Port</h6>
+		<p>Nuit à partir de <span class="price">52€</span></p>
+		<span class="rating1">
+   		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
 		</span>
-		</figcaption>
-		</figure>
+	</figcaption>
+</figure>
 
-		<figure>
-   		<img src="images/hebergements/4_small/lesmouettes3.jpg" alt="lesmouettes" />
-   		<figcaption><h6>Hôtel les Mouettes</h6>
+<figure>
+   	<img src="images/hebergements/4_small/lesmouettes3.jpg" alt="lesmouettes" />
+<figcaption>
+	<h6>Hôtel les Mouettes</h6>
    		<p>Nuit à partir de <span class="price">76€</span></p>
-   		<span class="rating1">
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="far fa-star"></i>
+		<span class="rating1">
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="far fa-star"></i>
 		</span>
-		</figcaption>
-		</figure>
+	</figcaption>
+</figure>
 
-		<figure>
-   		<img src="images/hebergements/4_small/lamer4.jpg" alt="lamer" />
-   		<figcaption><h6>Hôtel de la mer</h6>
+<figure>
+	<img src="images/hebergements/4_small/lamer4.jpg" alt="lamer" />
+<figcaption>
+	<h6>Hôtel de la mer</h6>
    		<p>Nuit à partir de <span class="price">46€</span></p>
-   		<span class="rating1">
-   				<i class="fas fa-star"></i>
-   				<i class="fas fa-star"></i>
-   				<i class="fas fa-star"></i>
-   				<i class="far fa-star"></i>
-   				<i class="far fa-star"></i>
-   		</span>
-   		</figcaption>
-		</figure>
+		<span class="rating1">
+   		<i class="fas fa-star"></i>
+   		<i class="fas fa-star"></i>
+   		<i class="fas fa-star"></i>
+   		<i class="far fa-star"></i>
+   		<i class="far fa-star"></i>
+		</span>
+	</figcaption>
+</figure>
 
-		<figure>
-   		<img src="images/hebergements/4_small/lepanier5.jpg" alt="lepanier" />
-   		<figcaption><h6>Auberge Le Panier</h6>
+<figure>
+   	<img src="images/hebergements/4_small/lepanier5.jpg" alt="lepanier" />
+<figcaption>
+	<h6>Auberge Le Panier</h6>
    		<p>Nuit à partir de <span class="price">23€</span></p>
-   		<span class="rating1">
-   		 		<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="far fa-star"></i>
+		<span class="rating1">
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="far fa-star"></i>
 		</span>
-		</figcaption>
-		</figure>
+	</figcaption>
+</figure>
 
-		<figure>
-   		<img src="images/hebergements/4_small/amina6.jpg" alt="amina" />
-   		<figcaption><h6>Hôtel chez Amina</h6>
+<figure>
+   	<img src="images/hebergements/4_small/amina6.jpg" alt="amina" />
+<figcaption>
+	<h6>Hôtel chez Amina</h6>
    		<p>Nuit à partir de <span class="price">96€</span></p>
-   		<span class="rating1">
-   		 		<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
+		<span class="rating1">
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
 		</span>
-		</figcaption>
-		</figure>
-
-		<br>
-<br>
-<a href="#" title="showmore">Afficher plus</a>
-<br>
+	</figcaption>
+</figure>
+	
+	<a href="#" title="showmore">Afficher plus</a>
 
 </section>
 
 <section class="housing2">
+	
+	<div class="trending">
+		<h3>Les Plus Populaires</h3>
+		<i class="fas fa-chart-line"></i>
+	</div>
 
-<div class="trending"><h3>Les Plus Populaires</h3><i class="fas fa-chart-line"></i></div>
-
-		<figure>
-   		<img src="images/hebergements/4_small/lesoleil1.jpg" alt="lamer" />
-   		<figcaption><h6>Hôtel le soleil du matin</h6>
+<figure>
+   	<img src="images/hebergements/4_small/lesoleil1.jpg" alt="lamer" />
+<figcaption>
+   	<h6>Hôtel le soleil du matin</h6>
    		<p>Nuit à partir de <span class="price">128€</span></p>
-   		<span class="rating2">
-   				<i class="fas fa-star"></i>
-   				<i class="fas fa-star"></i>
-   				<i class="fas fa-star"></i>
-   				<i class="fas fa-star"></i>
-   				<i class="fas fa-star"></i>
-   		</span>
-   		</figcaption>
-		</figure>
+		<span class="rating2">
+   		<i class="fas fa-star"></i>
+   		<i class="fas fa-star"></i>
+   		<i class="fas fa-star"></i>
+   		<i class="fas fa-star"></i>
+   		<i class="fas fa-star"></i>
+		</span>
+	</figcaption>
+</figure>
 
-		<figure>
-   		<img src="images/hebergements/4_small/aucoeur2.jpg" alt="lepanier" />
-   		<figcaption><h6>Au coeur de l'eau Chambre d'hôtes</h6>
+<figure>
+   	<img src="images/hebergements/4_small/aucoeur2.jpg" alt="lepanier" />
+<figcaption>
+	<h6>Au coeur de l'eau Chambre d'hôtes</h6>
    		<p>Nuit à partir de <span class="price">71€</span></p>
-   		<span class="rating2">
-   		 		<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="far fa-star"></i>
+		<span class="rating2">
+   		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="far fa-star"></i>
 		</span>
-		</figcaption>
-		</figure>
+	</figcaption>
+</figure>
 
-		<figure>
-   		<img src="images/hebergements/4_small/bleu3.jpg" alt="toutbleu" />
-   		<figcaption><h6>Hôtel tout Bleu tout Blanc</h6>
+<figure>
+   	<img src="images/hebergements/4_small/bleu3.jpg" alt="toutbleu" />
+<figcaption>
+	<h6>Hôtel tout Bleu tout Blanc</h6>
    		<p>Nuit à partir de <span class="price">68€</span></p>
-   		<span class="rating2">
-   		 		<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="fas fa-star"></i>
-				<i class="far fa-star"></i>
+		<span class="rating2">
+   		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="fas fa-star"></i>
+		<i class="far fa-star"></i>
 		</span>
-		</figcaption>
-		</figure>
-</section>
+	</figcaption>
+</figure>
 </div>
+	
+</section>
 
-<br>
+	<h3> Les Activités à Marseille </h3>
 
-<h3> Les Activités à Marseille </h3>
-
-<div id="panel2">
+<section id="panel2">
 
 <div class="activity1">
-
-		<figure>
-   		<img src="images/activites/4_small/vieuxport1.jpg" alt="vieuxport1" />
-   		<figcaption>Vieux Port</figcaption>
-  	 	</figure>
-
+	<figure>
+		<img src="images/activites/4_small/vieuxport1.jpg" alt="vieuxport1" />
+		<figcaption>Vieux Port</figcaption>
+	</figure>
 </div>
-
 
 <div class="activity2">
-<div class="chaos">
+	<div class="divide">
 		<figure>
-   		<img src="images/activites/4_small/fortdepomègues.jpg" alt="fort2" />
-   		<figcaption>Fort de Pomègues</figcaption>
-  	 	</figure>
-</div>
+			<img src="images/activites/4_small/fortdepomègues.jpg" alt="fort2" />
+			<figcaption>Fort de Pomègues</figcaption>
+		</figure>
+	</div>
 
-<div class="activity22">
-
+	<div class="activity22">
 		<figure>
-   		<img src="images/activites/4_small/îlesdufrioul.jpg" alt="îles3" />
-   		<figcaption>Îles du Frioul</figcaption>
-  	 	</figure>
-
-</div>
+			<img src="images/activites/4_small/îlesdufrioul.jpg" alt="îles3" />
+			<figcaption>Îles du Frioul</figcaption>
+		</figure>
+	</div>
 </div>
 
 <div class="activity3">
-
-		<figure>
-   		<img src="images/activites/4_small/calanques.jpg" alt="calanques4" />
-   		<figcaption>Parc National des Calanques</figcaption>
-  	 	</figure>
-
+	<figure>
+		<img src="images/activites/4_small/calanques.jpg" alt="calanques4" />
+		<figcaption>Parc National des Calanques</figcaption>
+	</figure>
 </div>
 
 <div class="activity4">
-<div class="chaos2">
-
+	
+	<div class="divide2">
 		<figure>
-   		<img src="images/activites/4_small/notredame.jpg" alt="notredame5" />
-   		<figcaption>Notre-Dame-de-la-Garde</figcaption>
-  	 	</figure>
-</div>
+			<img src="images/activites/4_small/notredame.jpg" alt="notredame5" />
+			<figcaption>Notre-Dame-de-la-Garde</figcaption>
+		</figure>
+	</div>
 
-<div class="activity44">
-
+	<div class="activity44">
 		<figure>
-   		<img src="images/activites/4_small/longchamp.jpg" alt="longchamp6" />
-   		<figcaption>Parc Longchamp</figcaption>
-  	 	</figure>
-
-</div>
-</div>
-</div>
+			<img src="images/activites/4_small/longchamp.jpg" alt="longchamp6" />
+			<figcaption>Parc Longchamp</figcaption>
+		</figure>
+	</div>
+</div>	
+	
+</section>
 
 <footer>
 
 <div class="about">
-
-<h5>A propos</h5>
-<a href="#" title="showmore">Fonctionnement du site</a>
-<a href="#" title="showmore">condition générale de vente</a>
-<a href="#" title="showmore">Données et confidentialité</a>
+	<h5>A propos</h5>
+	<a href="#" title="showmore">Fonctionnement du site</a>
+	<a href="#" title="showmore">condition générale de vente</a>
+	<a href="#" title="showmore">Données et confidentialité</a>
 </div>
 
 <div class="offers">
-
-<h5>Nos Hébergements</h5>
-<a href="#" title="showmore">Charte qualité</a>
-<a href="#" title="showmore">Soumettre votre hôtel</a>
+	<h5>Nos Hébergements</h5>
+	<a href="#" title="showmore">Charte qualité</a>
+	<a href="#" title="showmore">Soumettre votre hôtel</a>
 </div>
 
 <div class="assist">
-<h5>Assistance</h5>
-<a href="#" title="showmore">Centre d'aide</a>
-<a href="#" title="showmore">Nous contacter</a>
+	<h5>Assistance</h5>
+	<a href="#" title="showmore">Centre d'aide</a>
+	<a href="#" title="showmore">Nous contacter</a>
 </div>
+	
 </footer>
 </html>
