--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<div class="searchbar">
 		<label for="searchbar"><i class="fas fa-map-marker-alt"></i></label>
-		<input id="searchbar" name="searchbar" onfocus="this.value=''" onblur="this.value='Marseille, France'">
+		<input id="searchbar" name="searchbar" placeholder=" Marseille, France " onfocus="this.value=''" onblur="this.value='Marseille, France'">
 		<button>Rechercher</button>
 
 		<div class="mobile-search">	
